examples/petstore/petstore-service.yml
# Copyright (c) 2021 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: v1
kind: Service
metadata:
  name: petstore
  labels:
    app: petstore
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/override: proxy
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: petstore
