examples/petstore/petstore-private-ingress.yml
# Copyright (c) 2021 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: private-petstore
  annotations:
    konghq.com/plugins: request-id,rate-limiting,basic-auth,prometheus
    kubernetes.io/ingress.class: 'kong'
spec:
  rules:
    - http:
        paths:
          - path: /user
            backend:
              serviceName: petstore
              servicePort: 8080
