examples/petstore/petstore-public-ingress-2.yml
# Copyright (c) 2021 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-petstore-2
  annotations:
    konghq.com/plugins: request-id,rate-limiting,prometheus
    kubernetes.io/ingress.class: 'kong'
    configuration.konghq.com: route-customization
spec:
  rules:
    - host: awesome-kong.io
      http:
        paths:
          - path: /store
            backend:
              serviceName: petstore
              servicePort: 8080
