examples/petstore/petstore-public-ingress-pet.yml
# Copyright (c) 2021 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-petstore
  annotations:
     konghq.com/override: route-methods
     konghq.com/plugins: correlation-id,rate-limiting
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /pet
            pathType: Prefix
            backend:
              service:
                name: petstore
                port:
                  number: 8080
